--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@ h3 {
     margin-top: 20px;
 }
 
+h4 {
+    margin-top: 20px;
+}
+
 section>p {
     text-indent: 1.5em;
 }
@@ -118,12 +122,13 @@ td {
 
 th,
 td {
-    padding: 10px;
+    padding: 10px 50px;
 }
 
 caption {
     text-align: left;
 }
+
 
 
 /* Listas */
@@ -174,4 +179,54 @@ ol.alpha {
 .col-right {
     position: relative;
     float: right;
+}
+
+
+/* Formulario */
+
+label {
+    display: inline-block;
+    padding: 10px 0px;
+}
+
+fieldset {
+    border: 0px;
+    width: 100%;
+}
+
+input[type=submit] {
+    width: 100%;
+    font-size: 1.3em;
+    color: white;
+    text-decoration: none;
+    background-color: #3366cc;
+    padding: 5px 10px;
+    margin: 10px;
+    border: 2px solid black;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.267);
+    cursor: pointer;
+    
+}
+
+input[type=text],
+[type=date],
+[type=number] {
+    border: none;
+    border-bottom: 1px solid black;
+}
+
+input[type=radio],
+input[type=checkbox] {
+    cursor: pointer;
+}
+
+.regform {
+    display: flex;
+    flex-direction: row;
+}
+
+.regform>div {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
 }
